--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,23 @@
 	<properties>
 		<org.springframework-version>4.2.0.RELEASE</org.springframework-version>
 		<log4j.version>1.2.17</log4j.version>
+		<jackson.version>2.4.4</jackson.version>
 	</properties>
 
 	<dependencies>
 
+		<!-- Jackson JSON Mapper -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
